--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "css-loader": "^4.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.3.0",
